[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bandmap" 
version = "23.1.30"
description = "Bandmap accessory for fdlogger and wfdlogger"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Michael Bridak", email="michael.bridak@gmail.com" },
]
dependencies = [
  "Rich",
  "bs4",
  "lxml",
  "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: Console :: Curses",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Communications :: Ham Radio",
]

[project.urls]
"Homepage" = "https://github.com/mbridak/bandmap"
"Bug Tracker" = "https://github.com/mbridak/bandmap/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"bandmap.lib" = ["*.py",]

[project.scripts]
bandmap = "bandmap.__main__:run"
